--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.link-container{
+display: flex;
+justify-content: center;
+gap: 10px;
+}
